--- a/index.html
+++ b/index.html
@@ -47,15 +47,20 @@
   </div>
 </nav></header>
     <main>
+        <div class="container-fluid">
         <div class="row">
-            <span class="spantext gx-5">
+            <p class="spantext">
                 
                     Compra un Mac o un iPad con los descuentos para educación y&nbsp;llévate unos AirPods o&nbsp;el accesorio válido que&nbsp;elijas. <a href="#">Comprar ></a>
-            </span>
+            </p>
         </div>
-        <div class="row">
-            
         </div>
+            <div class="pro17">
+                <h2 class="textpro">iPhone 17 Pro</h2>
+                <p class="parrafpro">Muy.Muy.Pro</p>
+                <button><a href="#">Mas informacion</button>
+                <button><a href="#">Comprar</button>
+            </div>            
     </main>
     <section class="row"></section>
     <footer></footer>
