actualizacion row 1,2 check

--- a/index.html
+++ b/index.html
@@ -50,16 +50,17 @@
         <div class="container-fluid">
         <div class="row">
             <p class="spantext">
-                
-                    Compra un Mac o un iPad con los descuentos para educación y&nbsp;llévate unos AirPods o&nbsp;el accesorio válido que&nbsp;elijas. <a href="#">Comprar ></a>
+                Compra un Mac o un iPad con los descuentos para educación y&nbsp;llévate unos AirPods o&nbsp;el accesorio válido que&nbsp;elijas. <a class="textComprar" href="#">Comprar ></a>
             </p>
         </div>
         </div>
             <div class="pro17">
                 <h2 class="textpro">iPhone 17 Pro</h2>
-                <p class="parrafpro">Muy.Muy.Pro</p>
-                <button><a href="#">Mas informacion</button>
-                <button><a href="#">Comprar</button>
+                <p class="parrafpro">Muy. Muy.&nbsp;Pro</p>
+                <div class="botones">
+                <button class="boton1"><a class="botontext1" href="#">Más información</button>
+                <button class="boton2"><a class="botontext2" href="#">Comprar</button>
+                </div>
             </div>            
     </main>
     <section class="row"></section>
