--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </p>
         </div>
         </div>
-            <div class="pro17">
+            <div class="pro17 col-sm-12">
                 <h2 class="textpro">iPhone 17 Pro</h2>
                 <p class="parrafpro">Muy. Muy.&nbsp;Pro</p>
                 <div class="botones">
@@ -63,7 +63,56 @@
                 </div>
             </div>            
     </main>
-    <section class="row"></section>
+    <div class="container-fluid">
+    <section class="row">
+      <div class="airSection">
+        <h2 class="textAir">iPhone&nbsp;Air</h2>
+        <p class="parrafAir">El iPhone más fino. <br>El&nbsp;chip&nbsp;más pro.</p>
+        <div class="botones">
+          <button class="boton1"><a class="botontext1" href="#">Más información</button>
+                <button class="boton2White"><a class="botontext2" href="#">Comprar</button>
+        </div>
+      </div>
+    </section>
+    </div>
+    <div class="container-fluid">
+    <section class="row">
+      <div class="hero17">
+        <h2 class="textAir">iPhone&nbsp;17</h2>
+        <p class="parrafAir">Subidón de color.</p>
+        <div class="botones">
+          <button class="boton1"><a class="botontext1" href="#">Más información</button>
+                <button class="boton2White"><a class="botontext2" href="#">Comprar</button>
+        </div>
+        </div>
+        </section>
+        </div>
+
+        <div class="container-fluid">
+    <section class="row">
+      <div class="airPods">
+        <h3 class="textAir">AirPods&nbsp;Pro&nbsp;3</h3>
+        <p class="parrafAirPods">Los auriculares in-ear con la mejor cancelación activa de ruido del mundo.</p>
+        <div class="botones">
+          <button class="boton1"><a class="botontext1" href="#">Más información</button>
+                <button class="boton2White"><a class="botontext2" href="#">Comprar</button>
+        </div>
+        </div>
+        </section>
+        </div>
+        <div class="container-fluid">
+    <section class="row">
+      <div class="watch11">
+        <h3 class="logoWatch11"></h3>
+        <p class="parrafWatch11">La mejor forma de seguir tu salud.</p>
+        <div class="botones">
+          <button class="boton1"><a class="botontext1" href="#">Más información</button>
+                <button class="boton2White"><a class="botontext2" href="#">Comprar</button>
+        </div>
+        </div>
+        </section>
+        </div>
+
     <footer></footer>
   </body>
 </html>
