--- a/index.html
+++ b/index.html
@@ -1,118 +1,109 @@
 <!doctype html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Apple</title>
+    <title>Bootstrap demo</title>
     <link rel="stylesheet" href="styles/footer.css">
     <link rel="stylesheet" href="styles/header.css">
     <link rel="stylesheet" href="styles/main.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-  </head>
-  <body>
-    <header class="alineado"><nav class="navbar navbar-expand-lg bg-body-tertiary">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Dropdown
-          </a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
-          </ul>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-        </li>
-      </ul>
-      <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"/>
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
-    </div>
-  </div>
-</nav></header>
-    <main>
-        <div class="container-fluid">
-        <div class="row">
-            <p class="spantext">
-                Compra un Mac o un iPad con los descuentos para educación y&nbsp;llévate unos AirPods o&nbsp;el accesorio válido que&nbsp;elijas. <a class="textComprar" href="#">Comprar ></a>
-            </p>
-        </div>
-        </div>
-            <div class="pro17 col-sm-12">
-                <h2 class="textpro">iPhone 17 Pro</h2>
-                <p class="parrafpro">Muy. Muy.&nbsp;Pro</p>
-                <div class="botones">
-                <button class="boton1"><a class="botontext1" href="#">Más información</button>
-                <button class="boton2"><a class="botontext2" href="#">Comprar</button>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+</head>
+
+<body>
+    <nav>
+        <h2>encabezado</h2>
+    </nav>
+    <div class="container-fluid">
+        <main>
+            <div class="row">
+                <div class="col-sm-12">
+                    <p class="spantext">
+                        Compra un Mac o un iPad con los descuentos para educación y&nbsp;llévate unos AirPods o&nbsp;el
+                        accesorio
+                        válido que&nbsp;elijas. <a class="textComprar" href="#">Comprar ></a>
+                    </p>
                 </div>
-            </div>            
-    </main>
-    <div class="container-fluid">
-    <section class="row">
-      <div class="airSection">
-        <h2 class="textAir">iPhone&nbsp;Air</h2>
-        <p class="parrafAir">El iPhone más fino. <br>El&nbsp;chip&nbsp;más pro.</p>
-        <div class="botones">
-          <button class="boton1"><a class="botontext1" href="#">Más información</button>
-                <button class="boton2White"><a class="botontext2" href="#">Comprar</button>
-        </div>
-      </div>
-    </section>
+            </div>
+            <div class="row">
+                <div class="pro17 col-sm-12">
+                    <h2 class="textpro">iPhone 17 Pro</h2>
+                    <p class="parrafpro">Muy. Muy.&nbsp;Pro</p>
+                    <div class="botones">
+                        <button class="boton1 botontext1">Más información</button>
+                        <button class="boton2 botontext2">Comprar</button>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="airSection col-sm-12">
+                    <h2 class="textAir">iPhone&nbsp;Air</h2>
+                    <p class="parrafAir">El iPhone más fino. <br>El&nbsp;chip&nbsp;más pro.</p>
+                    <div class="botones">
+                        <button class="boton1 botontext1">Más información</button>
+                        <button class="boton2White botontext2">Comprar</button>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="hero17 col-sm-12">
+                    <h2 class="textAir">iPhone&nbsp;17</h2>
+                    <p class="parrafAir">Subidón de color.</p>
+                    <div class="botones">
+                        <button class="boton1 botontext1">Más información</button>
+                        <button class="boton2White botontext2">Comprar</button>
+                    </div>
+                </div>
+            </div>
+            <div class="row alto p-2">
+                <div class="watch11 col-sm-12 col-md-6">
+                    <h3 class="logoWatch11"></h3>
+                    <p class="parrafWatch11">La mejor forma de seguir tu salud.</p>
+                    <div class="botones">
+                        <button class="boton1 botontext1">Más información</button>
+                        <button class="boton2White botontext2">Comprar</button>
+                    </div>
+                </div>
+                <div class="airPods col-sm-12 col-md-6">
+                    <h3 class="textAir">AirPods&nbsp;Pro&nbsp;3</h3>
+                    <p class="parrafAirPods">Los auriculares in-ear con la mejor cancelación activa de ruido del
+                        mundo.</p>
+                    <div class="botones">
+                        <button class="boton1 botontext1">Más información</button>
+                        <button class="boton2White botontext2">Comprar</button>
+                    </div>
+                </div>
+            </div>
+            <div class="row alto">
+                    
+                <div class="watchSe3 col-sm-12 col-md-6 gx-1">
+                    <h3 class="logoWatchSe3"></h3>
+                    <p class="parrafWatchSe3">Te motiva. Te conoce. Te conecta. Te encanta.</p>
+                    <div class="botones">
+                        <button class="boton1 botontext1">Más información</button>
+                        <button class="boton2White botontext2">Comprar</button>
+                    </div>
+                </div>
+                <div class="tradeIn col-sm-12 col-md-6">
+                    <h3 class="logoTradeIn"></h3>
+                    <p class="parrafTradeIn">Llévate entre 180 € y 795 € de descuento al entregar un iPhone 13 o posterior.</p>
+                    <div class="botones">
+                        <button class="boton1 botontext1">Ver estimación</button>
+                    </div>
+                </div>
+            </div>
+            </div>
+
+
+        </main>
     </div>
-    <div class="container-fluid">
-    <section class="row">
-      <div class="hero17">
-        <h2 class="textAir">iPhone&nbsp;17</h2>
-        <p class="parrafAir">Subidón de color.</p>
-        <div class="botones">
-          <button class="boton1"><a class="botontext1" href="#">Más información</button>
-                <button class="boton2White"><a class="botontext2" href="#">Comprar</button>
-        </div>
-        </div>
-        </section>
-        </div>
+    <footer>
+        <h2>pie de pagina</h2>
+    </footer>
+    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+</body>
 
-        <div class="container-fluid">
-    <section class="row">
-      <div class="airPods">
-        <h3 class="textAir">AirPods&nbsp;Pro&nbsp;3</h3>
-        <p class="parrafAirPods">Los auriculares in-ear con la mejor cancelación activa de ruido del mundo.</p>
-        <div class="botones">
-          <button class="boton1"><a class="botontext1" href="#">Más información</button>
-                <button class="boton2White"><a class="botontext2" href="#">Comprar</button>
-        </div>
-        </div>
-        </section>
-        </div>
-        <div class="container-fluid">
-    <section class="row">
-      <div class="watch11">
-        <h3 class="logoWatch11"></h3>
-        <p class="parrafWatch11">La mejor forma de seguir tu salud.</p>
-        <div class="botones">
-          <button class="boton1"><a class="botontext1" href="#">Más información</button>
-                <button class="boton2White"><a class="botontext2" href="#">Comprar</button>
-        </div>
-        </div>
-        </section>
-        </div>
-
-    <footer></footer>
-  </body>
 </html>
