--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row alto p-2">
+            <div class="row alto">
                 <div class="watch11 col-sm-12 col-md-6">
                     <h3 class="logoWatch11"></h3>
                     <p class="parrafWatch11">La mejor forma de seguir tu salud.</p>
