cambios en pequeño

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row alto">
+            <div class="row ">
                 <div class="watch11 col-sm-12 col-md-6">
                     <h3 class="logoWatch11"></h3>
                     <p class="parrafWatch11">La mejor forma de seguir tu salud.</p>
@@ -104,9 +104,9 @@
                     </div>
                 </div>
             </div>
-            <div class="row alto">
+            <div class="row">
                     
-                <div class="watchSe3 col-sm-12 col-md-6 gx-1">
+                <div class="watchSe3 col-sm-12 col-md-6">
                     <h3 class="logoWatchSe3"></h3>
                     <p class="parrafWatchSe3">Te motiva. Te conoce. Te conecta. Te encanta.</p>
                     <div class="botones">
